Add basic project flow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,30 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <%= link_to  "Series Scraper", home_path, class: 'navbar-brand' %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSS" aria-controls="navbarSS" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSS">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to  "Add Show", new_show_path, class: 'nav-link' %>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class = 'container' >
     <%= yield %>
+</div>
   </body>
 </html>
